@startuml

!include ./theme.puml
!include ./bindables.puml

class RenderGraph{
    +{abstract} create() : void
    +{abstract} render() : void
    +{abstract} dispose() : void
}
RenderGraph --* RenderPass

abstract class RenderPass{
    +{abstract} recreate() : void
    +{abstract} execute() : void
}

RenderPass --> "*" Source
RenderPass --> "*" Sink

class Sink{}
Sink --> Resource

class Source{}
Source --> Resource

abstract class QueuePass extends RenderPass{
    +{abstract} submit(DrawJob) : void
    +execute() : void
    +{abstract} beforeAll() : void
    +{abstract} afterAll() : void
    +{abstract} executeDrawJob(DrawJob) : void
}

QueuePass --> "*" DrawJob


abstract class Renderable{
    +Transform transform
    +Renderable()
}
Renderable *-- "*" Technique

class Technique{
    +u8 enabled
}
Technique *-- "*" Step

class Step{
}

Step --> QueuePass
Step *-- "*" Bindable

class DrawJob{
    +bindable : Bindable[*]
    +drawCall : <?>
}

@enduml
